--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,6 @@
-<!-- Loop over each object in the projects array -->
+<h1>Hello</h1>
+{{!-- Template from mini project for reference --}
+{{!-- <!-- Loop over each object in the projects array -->
 {{#each projects as |project| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
@@ -21,4 +23,4 @@
     </p>
   </div>
 </div>
-{{/each}}
+{{/each}} --}}
