--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,5 @@
-<h1>Hello</h1>
-{{!-- Template from mini project for reference --}
-{{!-- <!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
+<!-- Loop over each object in the projects array -->
+{{!-- {{#each projects as |project| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
@@ -24,3 +22,15 @@
   </div>
 </div>
 {{/each}} --}}
+
+<!-- Loop over all users -->
+{{#each users as |user| }}
+<div class="row align-center mb-5">
+  <div class="col-md-6">
+    <h2>{{{get_emoji}}} {{user.name}}</h2>
+  </div>
+  <div class="col-md-6">
+    <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
+  </div>
+</div>
+{{/each}}
