--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,20 +6,16 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>Create a New Board:</h3>
 
-    <form class="form new-project-form">
+    <form class="form new-board-form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="board-name">board name:</label>
+        <input class="form-input" type="text" id="board-name" name="board-name" />
       </div>
       <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
-      </div>
-      <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
+        <label for="board-desc">board description:</label>
+        <textarea class="form-input" id="board-desc" name="board-desc"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
@@ -28,8 +24,8 @@
   </div>
 
   {{#if projects.length}}
-  <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+  <div class="col-md-6 board-list">
+    <h3>Current Boards:</h3>
 
     {{#each projects as |project|}}
     <div class="row mb-2">
