--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,7 +24,7 @@
 {{/each}} --}}
 
 <!-- Loop over all users -->
-{{#each users as |user| }}
+{{!-- {{#each users as |user| }}
 <div class="row align-center mb-5">
   <div class="col-md-6">
     <h2>{{{get_emoji}}} {{user.name}}</h2>
@@ -33,4 +33,30 @@
     <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
   </div>
 </div>
-{{/each}}
+{{/each}} --}}
+
+<!-- Loop over all user locations -->
+<div class="gap-2 flex flex-wrap">
+  {{#each locationlist as |location|}}
+    <div class="card card-side bg-grey-800 shadow-xl">
+      {{#if location.location_imageurl}}
+        <figure>
+          <img
+            src='{{location.location_imageurl}}'
+            alt='{{location.location_name}}'
+          />
+        </figure>
+      {{/if}}
+      <div class="card-body">
+        <h2 class="card-title">{{location.location_name}}</h2>
+        <div class="gap-2 rounded-2xl text-black bg-transparent w-fit flex flex-wrap flex-row">
+          <button class='btn btn-outline btn-primary'>{{location.location_name}}</button>
+          <button class='btn btn-outline btn-info'>{{location.location_notes}}</button>
+          <button class='btn btn-outline btn-primary'>{{location.board_name}}</button>
+          <button class='btn btn-outline btn-info'>{{location.board_description}}</button>
+          <button class='btn btn-outline btn-info'>{{location.name}}</button>
+        </div>
+      </div>
+    </div>
+  {{/each}}
+</div>
