--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -38,7 +38,7 @@
 <!-- Loop over all user locations -->
 <div class="gap-2 flex flex-wrap">
   {{#each locationlist as |location|}}
-    <div class="card card-side bg-grey-800 shadow-xl">
+    <div class="card lg:card-side bg-grey-800 shadow-xl">
       {{#if location.location_imageurl}}
         <figure>
           <img
@@ -49,7 +49,7 @@
       {{/if}}
       <div class="card-body">
         <h2 class="card-title">{{location.location_name}}</h2>
-        <div class="gap-2 rounded-2xl text-black bg-transparent w-fit flex flex-wrap flex-row">
+        <div class="gap-2 rounded-2xl text-black bg-transparent w-fit flex flex-wrap flex-col">
           <button class='btn btn-outline btn-primary'>{{location.location_name}}</button>
           <button class='btn btn-outline btn-info'>{{location.location_notes}}</button>
           <button class='btn btn-outline btn-primary'>{{location.board_name}}</button>
