--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,82 +1,82 @@
 <html lang='en'>
 
-  <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <!--<meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:; default-src 'self' http://127.0.0.1:3001/">-->
-    <title>Never Travel Board</title>
-    <!--<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">-->
-    <link href='/css/daisyui.full.min.css' rel='stylesheet' type='text/css' />
-    <link rel='stylesheet' href='/css/jass.css' />
-    <link rel='stylesheet' href='/css/style.css' />
-  </head>
+<head>
+  <meta charset='UTF-8' />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <!--<meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:; default-src 'self' http://127.0.0.1:3001/">-->
+  <title>Never Travel Board</title>
+  <!--<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">-->
+  <link href='/css/daisyui.full.min.css' rel='stylesheet' type='text/css' />
+  <link rel='stylesheet' href='/css/jass.css' />
+  <link rel='stylesheet' href='/css/style.css' />
+</head>
 
-  <body>
-    <div class='flex-column justify-space-around'>
-      <header class='display-flex justify-space-between align-center p-2'>
-        <h1 class="text-2xl btn btn-info">
-          <span role='img' aria-label='travel'>🛫</span>
-          <a href='/'>Welcome to Never Travel Board!</a>
-        </h1>
-        <nav>
-          <label class='flex cursor-pointer gap-2'>
-            <svg
-              xmlns='http://www.w3.org/2000/svg'
-              width='20'
-              height='20'
-              viewBox='0 0 24 24'
-              fill='none'
-              stroke='currentColor'
-              stroke-width='2'
-              stroke-linecap='round'
-              stroke-linejoin='round'
-            ><circle cx='12' cy='12' r='5' /><path
-                d='M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4'
-              /></svg>
-            <input
-              type='checkbox'
-              value='synthwave'
-              class='toggle theme-controller'
-            />
-            <svg
-              xmlns='http://www.w3.org/2000/svg'
-              width='20'
-              height='20'
-              viewBox='0 0 24 24'
-              fill='none'
-              stroke='currentColor'
-              stroke-width='2'
-              stroke-linecap='round'
-              stroke-linejoin='round'
-            ><path
-                d='M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z'
-              ></path></svg>
-          </label>
-          <!-- Conditionally render login or logout links -->
-          {{#if logged_in}}
-            <a href='/profile'>profile</a>
-            |
-            <button class='no-button' id='logout'>logout</button>
-          {{else}}
-            <a href='/login'>login</a>
-          {{/if}}
-        </nav>
-      </header>
-      <main class='container container-fluid mt-5'>
-        <!-- Render the sub layout -->
-        {{{body}}}
-      </main>
-      <footer>
+<body>
+  <div class='flex-column justify-space-around'>
+    <header class='display-flex justify-space-between align-center p-2'>
+      <h1 class="text-2xl btn btn-info">
+        <span role='img' aria-label='travel'>🛫</span>
+        <a href='/'>Welcome to Never Travel Board!</a>
+      </h1>
+      <nav>
+        <label class='flex cursor-pointer gap-2'>
+          <svg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none'
+            stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'>
+            <circle cx='12' cy='12' r='5' />
+            <path
+              d='M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4' />
+          </svg>
+          <input type='checkbox' value='synthwave' class='toggle theme-controller' />
+          <svg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none'
+            stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'>
+            <path d='M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z'></path>
+          </svg>
+        </label>
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+        <a href='/profile'>profile</a>
+        |
+        <button class='no-button' id='logout'>logout</button>
+        {{else}}
+        <a href='/login'>login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main class='container container-fluid mt-5'>
+      <!-- Render the sub layout -->
+      {{{body}}}
+    </main>
+    <footer class="footer items-center p-4 bg-primary text-neutral-content mt-5">
+      <aside class="items-center grid-flow-col">
+        <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
+          clip-rule="evenodd" class="fill-current">
+          <path
+            d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+          </path>
+        </svg>
+        <p>Copyright © 2023 - All right reserved</p>
+      </aside>
+      <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
+        <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+            <path
+              d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z">
+            </path>
+          </svg></a>
+        <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+            <path
+              d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z">
+            </path>
+          </svg></a>
+      </nav>
+    </footer>
+  </div>
 
-      </footer>
-    </div>
+  <!-- Render script for logged in users only -->
+  {{#if logged_in}}
+  <script src='/js/logout.js'></script>
+  {{/if}}
 
-    <script src='/js/cdn.tailwindcss.com_3.3.5.js'></script>
-
-    <!-- Render script for logged in users only -->
-    {{#if logged_in}}
-      <script src='/js/logout.js'></script>
-    {{/if}}
-  </body>
+  <script src='/js/cdn.tailwindcss.com_3.3.5.js'></script>
+</body>
 
 </html>
