--- a/views/boards.handlebars
+++ b/views/boards.handlebars
@@ -15,7 +15,7 @@
   {{#if boards.length}}
   <div class='bg-gray-200 rounded-box'>
     <h3 class='text-4xl font-bold p-2'>Current Board:
-      <span id="page_board_id" class='text-info' data-board_id="{{selectedboard.board_name}}">{{selectedboard.board_name}}</span>
+      <span id="page_board_id" class='text-info' data-board_id="{{selectedboard.board_id}}">{{selectedboard.board_name}}</span>
     </h3>
   </div>
 
