--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,10 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+{{> loginpartial}}
 
-    <form class="form login-form">
+<div class="row gap-2">
+  <div class="col-md-5 border bg-gray-100 border-base-300 rounded-3xl p-0 w-full lg:w-1/2 lg:mr-2">
+    <h2 class="m-0 p-2 w-full bg-gray-300 rounded-t-2xl">Login</h2>
+
+    <form class="px-3 form login-form border-base-300">
       <div class="form-group">
         <label for="email-login">email:</label>
         <input class="form-input" type="text" id="email-login" />
@@ -16,10 +18,10 @@
       </div>
     </form>
   </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
+  <div class="col-md-6 border bg-gray-100 border-base-300 rounded-2xl p-0 w-full lg:w-1/2 lg:mr-2">
+    <h2 class="m-0 p-2 w-full bg-gray-300 rounded-t-2xl">Signup</h2>
 
-    <form class="form signup-form">
+    <form class="px-3 form signup-form border-base-300">
       <div class="form-group">
         <label for="name-signup">name:</label>
         <input class="form-input" type="text" id="name-signup" />
