Deploy .env replacement for heroku

--- a/views/boards.handlebars
+++ b/views/boards.handlebars
@@ -27,6 +27,19 @@
 </div>
 {{/if}}
 
+<div class='flex flex-wrap text-primary'>
+  <h3>Share this board</h3>
+  <!-- if users want to share their board with others -->
+  <section class="form-control w-1/2 lg:w-1/2">
+    <label class="label">
+      <span class="label-text w-full max-w-xs text-2xl">with username:</span>
+    </label>
+
+    <input id="sharetouser" type="text" placeholder="Share this board to" name="desttypes" list="desttypes"
+      class="input input-bordered w-full input-primary" />
+  </section>
+</div>
+
 {{> boardlistpartial}}
 
 {{> locationpartial}}
