--- a/views/partials/locationpartial.handlebars
+++ b/views/partials/locationpartial.handlebars
@@ -22,12 +22,22 @@ selectedboard: SELECT * FROM locations WHERE board_id=?
             <div class='card-body h-fit p-5'>
                 <h2 class='card-title'>{{location.location_name}}</h2>
                 <p>{{location.location_notes}}</p>
-                <p>{{location.location_duration}}</p>
-                <p>{{location.latitude}},{{location.longitude}}</p>
+                <p class="text-xs">{{location.location_duration}}</p>
+                <p class="text-xs">{{location.latitude}},{{location.longitude}}</p>
             </div>
             <div class='card-actions justify-end pr-2 pb-2'>
-                <input type='checkbox' class='toggle' />
+                <input type='checkbox' class='toggle selectlocation' />
+                <button class="rounded-md hover:bg-neutral-500 deletelocation"
+                    data-location_id="{{location.location_id}}" onclick="deletelocationhandler(event)">
+                    {{!-- trashcan symbol from https://heroicons.com/ --}}
+                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                    </svg>
+                </button>
             </div>
+
         </div>
         {{/each}}
 
