--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,14 +1,14 @@
 <div class='row'>
   <div class='col-auto'>
-    <h2>Welcome, {{name}}!</h2>
+    <h2 class="text-4xl font-bold p-2 bg-primary text-primary-content rounded-box w-fit">Welcome, {{name}}!</h2>
   </div>
 </div>
 
 <div class='row mt-4'>
   <div class='col-md-6'>
-    <h3>Create a New Board:</h3>
+    <h3 class="text-4xl font-bold p-2 bg-gray-200 rounded-box">Create a New Board:</h3>
 
-    <form class='form new-board-form'>
+    <form class='form new-board-form bg-gray-100 rounded-box'>
       <div class='form-group'>
         <label for='board-name'>board name:</label>
         <input class='form-input' type='text' id='board-name' name='board-name' />
